discussion/kv_engine/154438/154438_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Deprecate the old executor in memcached core

The plan is to move the folly backed executor from ep-engine to
the core and migrate over to that.

Rename the files to deprecated_ and put the implementation in
cb::deprecated:: to make sure that we don't get any conflicts
with the new executor

Change-Id: Ia47418efbb0836feb204d044b414071adb13a1b8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-05-26 13:42:46.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-26 14:13:39.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9175/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:43:28: error: no member named "deprecated" in namespace "cb" [clang-diagnostic-error]
                       cb::deprecated::Task* task_)
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:55:9: error: cannot initialize object parameter of type "Couchbase::Thread" with an expression of type "CreateBucketThread" [clang-diagnostic-error]
        waitForState(Couchbase::ThreadState::Zombie);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:83:9: error: no member named "deprecated" in namespace "cb" [clang-diagnostic-error]
    cb::deprecated::Task* task;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:107:29: error: no member named "deprecated" in namespace "cb" [clang-diagnostic-error]
                        cb::deprecated::Task* task_)
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:117:9: error: cannot initialize object parameter of type "Couchbase::Thread" with an expression of type "DestroyBucketThread" [clang-diagnostic-error]
        waitForState(Couchbase::ThreadState::Zombie);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:140:9: error: no member named "deprecated" in namespace "cb" [clang-diagnostic-error]
    cb::deprecated::Task* task;
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9175/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_threads.h:43:28:
error: no member named "deprecated" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9175/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30821/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36075/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10738/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11142/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10882/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18701/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-05-27 20:52:10.000000000
Message: 
Abandoned

Migrate off the executor instead
----------------------------------------------------------------------------------------------------------------------
